# realtimesaliency-ncnn

./: README.md  build.gradle  import-summary.txt  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/blankproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fastsal  fastsal.param
app/src/main/cpp/: fastsal.cpp  fastsal.id.h
app/src/main/cpp/include/: allocator.h  blob.h  layer.h  layer_type_enum.h  mat.h  modelbin.h  net.h  paramdict.h  platform.h
app/src/main/java/com/example/blankproject/: FastSal.java  MainActivity.java  PhotoUtil.java
app/src/main/java/com/hallazie/: FastSal.java  MainActivity.java  MobileNetssd.java  PhotoUtil.java
app/src/main/jni/: CMakeLists.txt  fastsal.cpp
app/src/main/jniLibs/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
app/src/main/jniLibs/armeabi-v7a/include/ncnn/: platform.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/blankproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
saliency/: CMakeLists.txt
saliency/src/main/: AndroidManifest.xml
saliency/src/main/java/com/tencent/tnn/demo/: FaceDetector.java  MainActivity.java  SaliencyPredictor.java
saliency/src/main/jni/cc/: facedetector_jni.cc  facedetector_jni.h  saliencypredictor_jni.cc  saliencypredictor_jni.h
saliency/src/main/res/: resizer.py
saliency/src/main/res/layout/: activity_main.xml  fragment_streamfacedetector.xml
(+5 files in other folders)
